Add some extra fallback font faces if Calendas Plus isn't available

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -4,6 +4,6 @@
 
 // Customise the fonts
 @import "calendas-plus";
-$font-main: "Calendas Plus", Georgia, "Times New Roman", serif;
+$font-main: "Calendas Plus", Georgia, Cambria, "Times New Roman", Times, serif;
 
 @import "bland";
